adds reset button

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <div data-dropColumn="5" class="drop-dot"></div>
                 <div data-dropColumn="6" class="drop-dot"></div>
             </div>
-            <!-- I'm certain there's a cleaner way to arrange this, generate it programatically, etc-->
             <div class="game-board">
                 
             </div>
+            <div class="reset-button">RESET</div>
             <div class="error-popup">Fun Fact! You're actaully not allowed to do that</div>
         </div>
     </div>
